--- a/www/resources/css/style.css
+++ b/www/resources/css/style.css
@@ -1,1 +1,1 @@
-body{background-color:#e9e985;font-family:"Segoe UI",Tahoma,Geneva,Verdana,sans-serif}/*# sourceMappingURL=style.css.map */
+body{background-color:#85e9d8;font-family:"Segoe UI",Tahoma,Geneva,Verdana,sans-serif}/*# sourceMappingURL=style.css.map */
