front : userlist for searchuser

--- a/www/scss/pages/_searchuser.scss
+++ b/www/scss/pages/_searchuser.scss
@@ -2,11 +2,21 @@
 
     &__element{
 
+        border: $border-stroke;
+        border-radius: .625rem;
+
         img{
             border-radius: 50%;
-            width: 300px;
-            height: 300px;
-        } 
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+        }
+        
+        div{
+
+            margin: 1rem;
+
+        }
 
     }
 
