--- a/www/scss/utils/_variables.scss
+++ b/www/scss/utils/_variables.scss
@@ -18,3 +18,9 @@ $breakpoints: (
     medium: 768px,
     small: 576px,
 );
+
+/***********
+BORDER
+**************/
+
+$border-stroke : 1px solid $color-light;
