--- a/www/scss/utils/_variables.scss
+++ b/www/scss/utils/_variables.scss
@@ -7,6 +7,17 @@ $color-secondary: #000;
 $color-accent: #44DE68;
 $color-light: #AAAAAA;
 
+$color-cat: (
+    1: rgb(226, 83, 0),
+    2: rgb(226, 17, 34),
+    3: rgb(85, 155, 28),
+    4: rgb(3, 54, 223),
+);
+
+$transparent: rgba(0,0,0,0);
+
+$color-del: map-get($map: $color-cat, $key: 2);
+$color-edit: map-get($map: $color-cat, $key: 3);
 
 /**********
 RESPONSIVE BREAKPOINTS
@@ -23,4 +34,11 @@ $breakpoints: (
 BORDER
 **************/
 
-$border-stroke : 1px solid $color-light;
+$border-stroke: 1px solid $color-light;
+$border-radius: 0.625rem;
+
+/*************
+MARGIN
+***********/
+
+$margin-section: 5rem;
