--- a/www/scss/components/_buttons.scss
+++ b/www/scss/components/_buttons.scss
@@ -1,5 +1,6 @@
 button{
     cursor: pointer;
+    font-size: 1rem;
 }
 
 .btn{
@@ -8,7 +9,7 @@ button{
     border-radius: 0.3rem;
     font-weight: 600;
     border: none;
-    cursor: pointer;
+    
     &--accent{
         background-color: $color-accent;
     }
@@ -17,3 +18,4 @@ button{
         color: $color-light;
     }
 }
+
