--- a/www/scss/layouts/_general.scss
+++ b/www/scss/layouts/_general.scss
@@ -4,4 +4,18 @@
     &--col{
         flex-direction: column;
     }
+
+    &--center{
+        align-items: center;
+        justify-content: center;
+    }
+
+    &--ai-c{
+        align-items: center;
+    }
+
+    &--jc-c{
+        justify-content: center;
+    }
+
 }
