--- a/www/scss/main.scss
+++ b/www/scss/main.scss
@@ -7,5 +7,9 @@
 
 @import "layouts/general";
 @import "layouts/header";
+@import "layouts/section";
+@import "layouts/projectdisplay";
+@import "layouts/signforms";
 
 @import "pages/searchuser";
+@import "pages/project";
