--- a/www/scss/layouts/_header.scss
+++ b/www/scss/layouts/_header.scss
@@ -1,6 +1,9 @@
 header{
-    max-width: 98%;
+    max-width: 96%;
     margin: auto;
+    justify-content: space-between;
+    align-items: center;
+    height: 4.4rem;
 }
 
 .header{
