--- a/www/scss/components/_buttons.scss
+++ b/www/scss/components/_buttons.scss
@@ -1,15 +1,24 @@
+button{
+    cursor: pointer;
+}
+
 .btn{
     color: $color-primary;
     padding: 0.6rem 1.1rem;
     border-radius: 0.3rem;
     font-weight: 600;
+    font-size: .875rem;
     border: none;
-    cursor: pointer;
     &--accent{
         background-color: $color-accent;
     }
-    &--white{
+    &--primary{
         background-color: $color-primary;
         color: $color-light;
     }
+    &--secondary{
+        background-color: $color-secondary;
+        color: $color-primary;
+    }
+
 }
