--- a/www/scss/layouts/_general.scss
+++ b/www/scss/layouts/_general.scss
@@ -1,7 +1,16 @@
 .flex{
     display: flex;
-
     &--col{
         flex-direction: column;
     }
+    &--center{
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+}
+
+.container{
+    max-width: 1720px;
+    margin: auto;
 }
