--- a/www/scss/layouts/_header.scss
+++ b/www/scss/layouts/_header.scss
@@ -3,14 +3,35 @@ header{
     margin: auto;
     justify-content: space-between;
     align-items: center;
-    height: 4.4rem;
+    height: 4.6rem; 
+    >nav{
+        align-items: center;
+        >button{
+            margin-left: 1rem;
+        }
+    }
 }
 
 .header{
     &__logo{
         max-width: 130px;
     }
-    >nav{
-        align-items: flex-end;
+}
+
+form[action="searchuser.php"]{
+    border-radius: 0.3rem;
+    border: none;
+    background-color: $color-light2;
+    button{
+        padding: 0;
+        background-image: url("../../resources/img/icons/icon-search.svg");
+        background-size: 100%;
+        height: 1rem;
+        width: 1rem;
+        border: none;
+        margin-left: .8rem;
+    }
+    input{
+        margin-left: 0;
     }
 }
