--- a/www/scss/main.scss
+++ b/www/scss/main.scss
@@ -4,9 +4,10 @@
 @import "base/setup";
 
 @import "components/buttons";
+@import "components/form";
 
 @import "layouts/general";
 @import "layouts/header";
 
 @import "pages/searchuser";
-@import "page/index_deco";
+@import "pages/index_deco";
