--- a/www/scss/components/_buttons.scss
+++ b/www/scss/components/_buttons.scss
@@ -10,6 +10,7 @@ button{
     font-weight: 600;
     font-size: .875rem;
     border: none;
+    transition: 0.3s;
     
     &--accent{
         background-color: $color-accent;
@@ -21,6 +22,9 @@ button{
     &--secondary{
         background-color: $color-secondary;
         color: $color-primary;
+    }
+    &:hover{
+        filter: brightness(80%);
     }
 
 }
