--- a/www/scss/layouts/_projectdisplay.scss
+++ b/www/scss/layouts/_projectdisplay.scss
@@ -1,7 +1,8 @@
 .project-grid{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1rem;
+    column-gap: 1rem;
+    row-gap: 2rem;
 
     &__element{
 
@@ -17,8 +18,18 @@
         }
 
         form{
-            margin: 0.5rem;
-        }
+             /* margin: 0.5rem; */
+             .titleBtn{
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 60%;
+                font-size: .875rem;
+             }
+             label{
+                 color: $color-light;
+             }
+        } 
     }
 }
 
@@ -26,10 +37,13 @@
     transition: 0.3s;
     padding: 0;
     height: 250px;
-}
-
-.imgBtn:hover{
-    filter: brightness(50%);
+    border-radius: 0.625rem;
+    img{
+        border-radius: 0.625rem;
+    }
+    &:hover{
+        filter: brightness(50%);
+    }
 }
 
 .delBtn{
