--- a/www/scss/pages/_searchuser.scss
+++ b/www/scss/pages/_searchuser.scss
@@ -1,6 +1,6 @@
 .userlist{
     width: 90vw;
-    background-color: $color-secondary;
+    background-color: $color-light;
     align-items: center;
     padding: 1rem;
     border-radius: $border-radius;
