--- a/www/scss/layouts/_header.scss
+++ b/www/scss/layouts/_header.scss
@@ -19,6 +19,13 @@ header{
     &__logo{
         max-width: 130px;
     }
+
+    &__profilepic{
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+    }
 }
 
 form[action="searchuser.php"]{
