--- a/www/scss/layouts/_header.scss
+++ b/www/scss/layouts/_header.scss
@@ -9,6 +9,17 @@ header{
         >button{
             margin-left: 1rem;
         }
+        form{
+            button{
+                align-items: center;
+                margin-left: 1rem;
+                img{
+                    max-width: 1rem;
+                    margin: 0 .8rem 0 .8rem;
+                }
+            }
+            
+        }
     }
     /*position: fixed;
     top: 0;
@@ -27,7 +38,7 @@ form[action="searchuser.php"]{
     background-color: $color-light2;
     button{
         padding: 0;
-        background-image: url("../../resources/img/icons/icon-search.svg");
+        background-image: url("../../resources/media/img/ico/icon-search.svg");
         background-size: 100%;
         height: 1rem;
         width: 1rem;
