--- a/www/scss/layouts/_header.scss
+++ b/www/scss/layouts/_header.scss
@@ -13,7 +13,7 @@ header{
             button{
                 align-items: center;
                 margin-left: 1rem;
-                img{
+                img:not(.header__profilepic){
                     max-width: 1rem;
                     margin: 0 .8rem 0 .8rem;
                 }
