--- a/www/scss/layouts/_header.scss
+++ b/www/scss/layouts/_header.scss
@@ -4,6 +4,7 @@ header{
     justify-content: space-between;
     align-items: center;
     height: 4.6rem; 
+    margin-bottom: 3rem;
     >nav{
         align-items: center;
         >button{
