--- a/www/scss/main.scss
+++ b/www/scss/main.scss
@@ -5,6 +5,7 @@
 
 @import "components/buttons";
 @import "components/form";
+@import "components/errormsg";
 
 @import "layouts/general";
 @import "layouts/header";
