--- a/www/scss/components/_buttons.scss
+++ b/www/scss/components/_buttons.scss
@@ -28,11 +28,14 @@ button{
     }
 
     &--none{
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
         border: none;
-        background-color: $transparent;
-
+        padding: .8rem;
         img{
             width: 50px;
+            height: 50px;
         }
     }
 
@@ -40,8 +43,11 @@ button{
 
 #btnPlus{
     position: fixed;
-    bottom: 2rem;
-    right: 2rem;
+    bottom: 3rem;
+    right: 3rem;
+    box-shadow:
+        0  5px 10px rgba(154,160,185,0.05),
+        0 15px 40px rgba(166,173,201,0.2);
 }
 
 
