--- a/www/scss/layouts/_header.scss
+++ b/www/scss/layouts/_header.scss
@@ -3,7 +3,8 @@ header{
     margin: auto;
     justify-content: space-between;
     align-items: center;
-    height: 4.6rem; 
+    height: 4.6rem;
+    border-bottom: 1px solid $color-light2;
     >nav{
         align-items: center;
         >button{
@@ -36,6 +37,10 @@ header{
         width: 50px;
         height: 50px;
         object-fit: cover;
+        &__container{
+            width: 50px;
+            height: 50px;
+        }
     }
 }
 
